--- a/AddSalesAssignment(week6)(1).ipynb
+++ b/AddSalesAssignment(week6)(1).ipynb
@@ -531,7 +531,7 @@
    "outputs": [],
    "source": [
     "y = df['Profit(in Thousands)']\n",
-    "x=df.drop(['Date','Profit(in Thousands)'],axis=1)"
+    "x=df.drop(['Date','Profit(in Thousands)','Add5(in Thousands)'],axis=1)"
    ]
   },
   {
